# crytter

./: Cargo.toml  TODO.md  package-lock.json  package.json  playwright.config.mjs  resume.sh
crates/crytter-grid/: Cargo.toml
crates/crytter-grid/src/: cursor.rs  term.rs
crates/crytter-grid/tests/: integration.rs
crates/crytter-render/src/: lib.rs  palette.rs  renderer.rs
crytter-wasm/src/: lib.rs
inbox/: hermytt-canvas-bug.md  hermytt-resize-fix.md  hermytt-resize-response.md  hermytt-session-response.md
tests/e2e/: claude-code.spec.mjs  claude-recording.spec.mjs  debug-deep.spec.mjs  terminal.spec.mjs  tui-stress.spec.mjs
www/: index.html  test.html
